<resources>
    <string name="app_name">Link Note Alpha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_btn_navigation_activity">BtnNavigationACtivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_tab2">Tab2Activity</string>
    <string name="open_drawer">Open menu</string>
    <string name="close_drawer">Close menu</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="All">All</string>
    <string name="title_activity_new_link_item">NewLinkItemActivity</string>

    <string name="facebook_app_id">1056409554489687</string>
    <string name="fb_login_protocol_scheme">fb1056409554489687</string>


    <!-- UI String -->
    <string name="name">Name</string>
    <string name="color">Color</string>
    <string name="url">URL</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
</resources>
